5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1679_1872.log
== TEST (2019-05-01 22:04:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
p = input().split()
x, y = p

x = float(x)
y = float(y)

if x == 0:
    if y == 0:
        print('Origem')
    if y != 0:
        print('Eixo Y')
if y == 0:
    if x != 0:
        print('Eixo X')
if x > 0:
    if y > 0:
        print('Q1')
    if y < 0:
        print('Q4')
if x < 0:
    if y > 0:
        print('Q2')
    if y < 0:
        print('Q3')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x, y = p
ValueError: not enough values to unpack (expected 2, got 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:05:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
p = input().split()
x = float(x)
y = float(y)

if x == 0:
    if y == 0:
        print('Origem')
    if y != 0:
        print('Eixo Y')
if y == 0:
    if x != 0:
        print('Eixo X')
if x > 0:
    if y > 0:
        print('Q1')
    if y < 0:
        print('Q4')
if x < 0:
    if y > 0:
        print('Q2')
    if y < 0:
        print('Q3')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x = float(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:06:06) 
-- CODE:
p = input().split()
x, y = p

x = float(x)
y = float(y)

if x == 0:
    if y == 0:
        print('Origem')
    if y != 0:
        print('Eixo Y')
if y == 0:
    if x != 0:
        print('Eixo X')
if x > 0:
    if y > 0:
        print('Q1')
    if y < 0:
        print('Q4')
if x < 0:
    if y > 0:
        print('Q2')
    if y < 0:
        print('Q3')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x, y = p
ValueError: not enough values to unpack (expected 2, got 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:56:07) 
-- CODE:
p = input().split()
x, y = p

x = float(x)
y = float(y)

if x == 0:
    if y == 0:
        print('Origem')
    if y != 0:
        print('Eixo Y')
if y == 0:
    if x != 0:
        print('Eixo X')
if x > 0:
    if y > 0:
        print('Q1')
    if y < 0:
        print('Q4')
if x < 0:
    if y > 0:
        print('Q2')
    if y < 0:
        print('Q3')
-- EXECUTION TIME:
0.205571
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1872/main.py", line 2, in <module>
    x, y = p
ValueError: need more than 1 value to unpack

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:56:33) 
-- CODE:
p = input().split()
x, y = p

x = float(x)
y = float(y)

if x == 0:
    if y == 0:
         print('Origem')
    if y != 0:
        print('Eixo Y')
if y == 0:
    if x != 0:
         print('Eixo X')
if x > 0:
    if y > 0:
         print('Q1')
    if y < 0:
        print('Q4')
if x < 0:
    if y > 0:
         print('Q2')
    if y < 0:
        print('Q3')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x, y = p
ValueError: not enough values to unpack (expected 2, got 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:56:36) 
-- CODE:
p = input().split()
x, y = p

x = float(x)
y = float(y)

if x == 0:
    if y == 0:
         print('Origem')
    if y != 0:
        print('Eixo Y')
if y == 0:
    if x != 0:
         print('Eixo X')
if x > 0:
    if y > 0:
         print('Q1')
    if y < 0:
        print('Q4')
if x < 0:
    if y > 0:
         print('Q2')
    if y < 0:
        print('Q3')
-- EXECUTION TIME:
0.194179
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1872/main.py", line 2, in <module>
    x, y = p
ValueError: need more than 1 value to unpack

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
